# bgmtv-rs

./: Cargo.toml  README.md
.github/workflows/: check.yaml
src/: client.rs  lib.rs  types.rs
src/client/: episodes.rs  subjects.rs
