[package]
name = "bgmtv"
version = "0.2.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
edition = "2021"
description = "An API wrapper for bangumi.tv based on reqwest."
repository = "https://github.com/duskmoon314/bgmtv-rs"
license = "MIT"
include = ["/src", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
derive_builder = "0.20.2"
error_set = "0.7.0"
reqwest = { version = "0.12.8", features = [
    "json",
    "native-tls",
    "native-tls-alpn",
] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.19"
url = "2.5.2"
utility-types = "0.0.4"

[dev-dependencies]
anyhow = "1.0.91"
tokio = { version = "1.41.0", features = ["full"] }
