[package]
name = "bgmtv"
version = "0.3.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
edition = "2021"
description = "An API wrapper for bangumi.tv based on reqwest."
repository = "https://github.com/duskmoon314/bgmtv-rs"
license = "MIT"
include = ["/src", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
derive_builder = "0.20.2"
error_set = "0.8.5"
reqwest = { version = "0.12.15", features = [
    "json",
    "native-tls",
    "native-tls-alpn",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
url = "2.5.4"
utility-types = "0.0.4"

[dev-dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.2", features = ["full"] }
